grammar.js
    source_file: $ => optional(choice(
      repeat1(choice(
        $.module_extension_definition,
        $.module_definition,
        $.address_block,
      )),
      repeat1($._snippet_item),
    )),

    // Legacy address blocks: `address 0x42 { module m { ... } }`. Still parsed
    // by the Move compiler, so accept them for editor robustness.
    _snippet_item: $ => choice(
      $.hover_function,
      $.hover_struct,
      $.hover_enum,
      $.hover_variant,
      $.hover_const,
      $.hover_local,
      $.hover_module,
      $._type,
    ),

    // Qualified-name prefix like `sui::coin::` or `0x2::coin::` used by hover
    // signatures, which always render fully-qualified member names.
    ability: $ => choice(
      'copy',
      'drop',
      'store',
      'key',
    ),

    module_definition: $ => {
      return seq(
        'module',
        // The bare-identifier form covers legacy modules inside `address` blocks.
        field('module_identity', choice($.module_identity, $._module_identifier)),
        field('module_body', $.module_body),
      );
    },
    module_body: $ => {
      const item = choice(
        $.use_declaration,
        $.friend_declaration,
        $.constant,
        $._function_item,
        $._struct_item,
        $._enum_item,
        $.spec_block,
      );
      // prec.right so that after `module a::b;` subsequent items are consumed
      // into the module body rather than parsed as top-level snippet items.
      return choice(
        prec.right(seq(';', repeat(item))),
        seq('{', repeat(item), '}'),
      );
    },

    // Annotations
    annotation: $ => seq(
      "#[",
      sepBy1(",", $.annotation_item),
      "]"
    ),

    annotation_expr: $ => choice(
      field("name", $.identifier),
      seq(
        field("name", $.identifier), "=", field("value", choice(field("local_const", seq('::', $.module_access)), $.module_access, $._literal_value))
      ),
    ),

    annotation_list: $ => seq(
      field("name", $.identifier),
      "(",
      sepBy(",", choice($._literal_value, $.annotation_item, $.module_access, field("local_const", seq('::', $.module_access)))),
      ")"
    ),

    annotation_item: $ => choice(
      field("annotation_expr", $.annotation_expr),
      field("annotation_list", $.annotation_list),
    ),

    // Constants
    datatype_fields: $ => choice(
      $.positional_fields,
      $.named_fields,
    ),
    positional_fields: $ => seq(
      '(',
      sepBy(',', $._type),
      ')'
    ),
    named_fields: $ => seq(
      '{',
      sepBy(',', $.field_annotation),
      '}'
    ),

    // Enum definitions
    _enum_item: $ => choice(
      $.enum_definition,
    ),
    enum_definition: $ => seq(
      optional('public'),
      $._enum_signature,
      field('enum_variants', $.enum_variants),
      optional(field('postfix_ability_declarations', $.postfix_ability_decls)),
    ),
    _enum_signature: $ => seq(
      'enum',
      field('name', $._enum_identifier),
      optional(field('type_parameters', $.type_parameters)),
      optional(field('ability_declarations', $.ability_decls)),
    ),
    enum_variants: $ => seq(
      '{',
      sepBy(',', $.variant),
      '}'
    ),
    variant: $ => seq(
      field('variant_name', $._variant_identifier),
      optional(field('fields', $.datatype_fields)),
    ),

    // Struct definitions
    _struct_item: $ => choice(
      $.native_struct_definition,
      $.struct_definition,
    ),
    struct_definition: $ => seq(
      optional('public'),
      $._struct_signature,
      field('struct_fields', $.datatype_fields),
      optional(field('postfix_ability_declarations', $.postfix_ability_decls)),
      // positional structs without postfix abilities end in `;`: `struct P(u64);`
      optional(';'),
    ),
    field_annotation: $ => seq(
      // numeric names cover positional fields as rendered in IDE hover
      // signatures (`0: u64`)
      field('field', choice($._field_identifier, $.num_literal)),
      ':',
      field('type', $._type),
    ),
    // ability lists cannot be empty; trailing commas are tolerated because
    // prettier-move deliberately formats them away
    ability_decls: $ => seq(
      'has',
      sepBy1(',', $.ability),
    ),
    postfix_ability_decls: $ => seq(
      'has',
      sepBy1(',', $.ability),
      ';',
    ),

    _struct_signature: $ => seq(
      'struct',
      field('name', $._struct_identifier),
      optional(field('type_parameters', $.type_parameters)),
      optional(field('ability_declarations', $.ability_decls)),
    ),

    // Function definitions
    _function_item: $ => choice(
      $.native_function_definition,
      $.native_macro_function_definition,
      $.macro_function_definition,
      $.function_definition,
    ),
    function_definition: $ => seq(
      $._function_signature,
      field('body', $.block)
    ),
    _function_signature: $ => seq(
      repeat($.modifier),
      'fun',
      field('name', $._function_identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.function_parameters),
      optional(field('return_type', $.ret_type)),
    ),
    function_parameters: $ => seq(
      '(',
      sepBy(',', choice($.mut_function_parameter, $.function_parameter)),
      ')',
    ),

    // Spec block start
    _type: $ => choice(
      $.apply_type,
      $.ref_type,
      $.tuple_type,
      $.function_type,
      $.primitive_type,
    ),
    apply_type: $ => prec.left(PRECEDENCE.apply_type, seq(
      $.module_access,
      optional(field('type_arguments', $.type_arguments)),
    )),
    primitive_type: $ => choice(
      'u8',
      'u16',
      'u32',
      'u64',
      'u128',
      'u256',
      'bool',
      'address',
      'signer',
    ),
    ret_type: $ => seq(':', $._type),

    // Unified name-access chain (the compiler's NameAccessChain model): any
    // number of `module:`-tagged prefix segments, each optionally carrying
    // type arguments, ending in a `member:`. `a::b` is module::member,
    // `a::b::C::D` is module::module::module::member — semantic roles
    // (module vs enum vs variant) are a naming-convention concern for
    // queries, exactly as in the compiler's AST. The dynamic precedence
    // prefers the path/type-arguments reading over `<`/`>` comparisons.
    module_access: $ => choice(
      // macro variable access
      seq('$', field('member', $.identifier)),
      // address access
      seq('@', field('member', $.identifier)),
      seq(
        field('member', alias($._reserved_identifier, $.identifier)),
        optional(field('type_arguments', $.type_arguments)),
      ),
      seq(
        field('member', $.identifier),
        optional(field('type_arguments', $.type_arguments)),
      ),
      prec.dynamic(1, seq(
        repeat1(choice(
          // a leading numeric address takes no type arguments
          seq(field('module', $.num_literal), '::'),
          seq(
            field('module', $._module_identifier),
            optional(field('type_arguments', $.type_arguments)),
            '::',
          ),
        )),
        field('member', $.identifier),
        optional(field('type_arguments', $.type_arguments)),
      )),
    ),

    module_identity: $ =>
      seq(
        field('address', choice($.num_literal, $._module_identifier)),
        '::',
        field('module', $._module_identifier)
      ),

    // KNOWN DIVERGENCE (backlog P6): the compiler only reads `<` as type
    // arguments in expression position when it is ADJACENT to the name, so
    // `h(a < b, c > (d))` is two comparisons. token.immediate cannot express
    // this here because whitespace is an extras token (once the whitespace
    // token is shifted, `<` is "immediate" again); the fix would need the
    // scanner to own whitespace and track adjacency state. See
    // test/corpus/known_failures.txt.
    type_arguments: $ => seq(
      '<',
      sepBy1(',', $._type),
      '>'
    ),

    function_parameter: $ => seq(
      choice(
        field('name', $._variable_identifier),
        seq('$', field('name', $._variable_identifier)),
      ),
      ':',
      field('type', $._type),
    ),

    // type parameter grammar; the parameter list may be empty (`struct S<>()`)
    type_parameters: $ => seq('<', sepBy(',', $.type_parameter), '>'),
    type_parameter: $ => seq(
      optional('phantom'),
      optional('$'),
      $._type_parameter_identifier,
      optional(seq(':',
        sepByStrict1('+', $.ability)
      ))
    ),

    // Block

    block: $ => seq(
      '{',
      repeat($.use_declaration),
      repeat($.block_item),
      optional($._expression),
      '}'
    ),
    block_item: $ => seq(
      choice(
        $._expression,
        $.let_statement,
      ),
      ';'
    ),
    let_statement: $ => seq(
      'let',
      field('binds', $.bind_list),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('expr', $._expression)))
    ),
    // Block end


    // Expression

    _expression: $ => choice(
      $.call_expression,
      $.macro_call_expression,
      $.lambda_expression,
      $.if_expression,
      $.while_expression,
      $.return_expression,
      $.abort_expression,
      $.assign_expression,
      // unary expression is included in binary_op,
      $._unary_expression,
      $.binary_expression,
      $.cast_expression,
      $.quantifier_expression,
      $.match_expression,
      $.vector_expression,
      $.loop_expression,
      $.identified_expression,
    ),

    match_expression: $ => seq(
      'match',
      '(',
      field('match_scrutiny', $._expression),
      ')',
      $._match_body,
    ),

    _match_body: $ => seq(
      '{',
      sepBy(',', $.match_arm),
      '}',
    ),

    match_condition: $ => seq(
      'if',
      '(',
      field('condition', $._expression),
      ')',
    ),

    match_arm: $ => seq(
      $.bind_list,
      optional($.match_condition),
      '=>',
      $._expression,
    ),

    call_expression: $ => prec.dynamic(1, seq(
      $.name_expression,
      field('args', $.arg_list),
    )),
    pack_expression: $ => seq(
      $.name_expression,
      field('body', $.field_initialize_list),
    ),
    name_expression: $ => seq(
      optional('::'),
      field('access', $.module_access),
    ),

    assign_expression: $ => prec.left(PRECEDENCE.assign,
      seq(
        field('lhs', $._unary_expression),
        '=',
        field('rhs', $._expression)
      )
    ),

    binary_expression: $ => {
      const table = [
        [PRECEDENCE.implies, '==>'],
        [PRECEDENCE.implies, '<==>'],
        [PRECEDENCE.or, '||'],
        [PRECEDENCE.and, '&&'],
        [PRECEDENCE.eq, '=='],
        [PRECEDENCE.neq, '!='],
        [PRECEDENCE.lt, '<'],
        [PRECEDENCE.gt, '>'],
        [PRECEDENCE.le, '<='],
        [PRECEDENCE.ge, '>='],
        [PRECEDENCE.range, '..'],
        [PRECEDENCE.bitor, '|'],
        [PRECEDENCE.xor, '^'],
        [PRECEDENCE.bitand, '&'],
        [PRECEDENCE.shl, '<<'],
        [PRECEDENCE.shr, '>>'],
        [PRECEDENCE.add, '+'],
        [PRECEDENCE.sub, '-'],
        [PRECEDENCE.mul, '*'],
        [PRECEDENCE.div, '/'],
        [PRECEDENCE.mod, '%']
      ];

      let binary_expression = choice(...table.map(
        ([precedence, operator]) => prec.left(precedence, seq(
          field('lhs', $._expression),
          field('operator', alias(operator, $.binary_operator)),
          field('rhs', $._expression),
        ))
      ));

      return binary_expression;
    },

    _unary_expression: $ => prec(11, choice(
      $.unary_expression,
      $.borrow_expression,
      $.dereference_expression,
      $.move_or_copy_expression,
      $._expression_term,
    )),
    // Prefix operators take a unary-level operand, as in the compiler's
    // parse_unary_exp: `!a && b` is `(!a) && b`, `*x = y` is `(*x) = y`.
    // parse_unary_exp bottoms out in parse_term, which admits control
    // expressions, so `&return x` / `&'a: loop {}` stay valid.
    field_initialize_list: $ => seq(
      '{',
      sepBy(',', $.exp_field),
      '}'
    ),

    arg_list: $ => seq(
      '(',
      sepBy(',', $._expression),
      ')'
    ),

    exp_field: $ => seq(
      field('field', $._field_identifier),
      optional(seq(
        ':',
        field('expr', $._expression)
      ))
    ),

    bind_list: $ => choice(
      $._bind,
      $.comma_bind_list,
      $.or_bind_list,
      $.paren_bind,
    ),
    at_bind: $ => seq($._variable_identifier, '@', $.bind_list),
    // dynamic precedence so `(x)` stays a comma_bind_list rather than a
    // paren_bind grouping
    or_bind_list: $ => prec.left(seq($._or_bind, repeat1(seq('|', $._or_bind)))),
    _or_bind: $ => choice(
      $._bind,
      $.paren_bind,
    ),
    // balanced grouping around a nested or-list or a single pattern,
    // e.g. `(x @ Maybe::Nothing) | (x @ Maybe::Just(_))`
    paren_bind: $ => seq('(', choice($.or_bind_list, $._bind), ')'),

    _bind: $ => choice(
      choice(
        $.mut_bind_var,
        alias($._variable_identifier, $.bind_var)
      ),
      $.bind_unpack,
      $.at_bind,
      $._literal_value,
    ),
    bind_unpack: $ => seq(
      $.name_expression,
      optional(field('bind_fields', $.bind_fields)),
    ),
    bind_fields: $ => choice(
      $.bind_positional_fields,
      $.bind_named_fields,
    ),
    _spread_operator: _$ => '..',
    bind_positional_fields: $ => seq(
      '(', sepBy(',', choice($.bind_field, $.mut_bind_field)), ')'
    ),
    bind_named_fields: $ => seq(
      '{', sepBy(',', choice($.bind_field, $.mut_bind_field)), '}'
    ),

    mut_bind_field: $ => seq(
      'mut',
      $.bind_field,
    ),

    bind_field: $ => choice(seq(
      field('field', $.bind_list), // direct bind
      optional(seq(
        ':',
        field('bind', $.bind_list)
      ))
    ), $._spread_operator),
    // Fields and Bindings - End

    // literals
    _literal_value: $ => choice(
      $.address_literal,
      $.bool_literal,
      $.num_literal,
      $.hex_string_literal,
      $.byte_string_literal,
      $.string_literal,
      // $.vector_literal,
    ),

    num_literal: $ => prec.right(seq(
      choice(
        /[0-9][0-9_]*/,
        /0x[a-fA-F0-9_]+/
      ),
      optional(choice(
        'u8',
        'u16',
        'u32',
        'u64',
        'u128',
        'u256'
      ))
    )),
    // Strings cannot contain raw newlines (compiler lexer rule); this also
    // keeps an unclosed quote from swallowing the rest of the file.
    _module_identifier: $ => alias($.identifier, $.module_identifier),
    _variant_identifier: $ => alias($.identifier, $.variant_identifier),
    _variable_identifier: $ => alias($.identifier, $.variable_identifier),
    _field_identifier: $ => alias($.identifier, $.field_identifier),
    _type_parameter_identifier: $ => alias($.identifier, $.type_parameter_identifier),
    identifier: $ => /(`)?[a-zA-Z_][0-9a-zA-Z_]*(`)?/,
    _reserved_identifier: $ => choice($._forall, $._exists, 'spec'),

    line_comment: $ => choice(
      token(/\/\/[^\n]*/),
      seq($._doc_line_marker, alias($._doc_line_content, $.doc_comment)),
    ),
    newline: $ => token(/\n/),
